<resources>
    <string name="app_name">FAAP - Fit As A Plant</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_journal">Journal</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_settings">About</string>
    <string name="menu_item_food_list">Recipes</string>
    <string name="login_et_name">username</string>
    <string name="login_et_password">password</string>
    <string name="login_btn_submit">Submit</string>
    <string name="copy">© Vlad Puscaru 2019. FAPA - Fit As A Plant.</string>
    <string name="login_et_username_hint">Username</string>
    <string name="login_et_password_hint">Password</string>
    <string name="login_btn_login">Log in</string>
    <string name="login_btn_register">Register</string>
    <string name="login_btn_forgot_password">Forgot password</string>

    <string name="empty_string"></string>

    <!-- TODO: Delete test_text before finishing  -->
    <string name="test_text">Lorem ipsum</string>
    <!-- TODO: Delete test_text before finishing  -->

    <string name="home_dialog_option_2">Choose from Database</string>
    <string name="home_dialog_option_1">Create a new food item</string>
    <string name="home_dialog_title">Add to your menu</string>
    <string name="home_section_2_title">Today\'s track</string>
    <string name="home_subsection_food_title">FOOD</string>
    <string name="home_subsection_food_button">ADD FOOD TO </string>
    <string name="home_btn_subsection_food_breakfast">BREAKFAST</string>
    <string name="home_btn_subsection_food_lunch">LUNCH</string>
    <string name="home_btn_subsection_food_dinner">DINNER</string>
    <string name="home_btn_subsection_food_snacks">SNACKS</string>
    <string name="home_chart_category_text">Category consumption</string>
    <string name="home_pick_dialog_title">Pick food item</string>
    <string name="register_input_username_label">Username</string>
    <string name="register_input_password_label">Password</string>
    <string name="register_input_confirm_password_label">Confirm password</string>
    <string name="register_section_account_info_title">Account Info</string>
    <string name="register_section_personal_info_title">Personal Info</string>
    <string name="register_input_birthday_label">Birthday</string>
    <string name="register_input_weight_label">Weight</string>
    <string name="register_input_height_label">Height</string>
    <string name="register_input_image">Avatar</string>
    <string name="register_dialog_option_1">Take Picture</string>
    <string name="register_dialog_option_2">Choose from Gallery</string>
    <string name="register_dialog_title">Add avatar</string>
    <string name="register_btn_register">Register</string>
    <string name="register_btn_save">Save</string>
    <string name="add_food_name_label">Name</string>
    <string name="add_food_ingredients_title">Ingredients</string>
    <string name="add_food_ingredients_choose_label">Choose</string>
    <string name="add_food_ingredients_btn_choose">Choose</string>
    <string name="add_food_ingredients_btn_create">Create</string>
    <string name="add_food_ingredients_create_name_label">Name</string>
    <string name="add_food_ingredients_create_calories_label">Calories</string>
    <string name="add_food_ingredients_create_carbohydrates_label">Carbohydrates</string>
    <string name="add_food_ingredients_create_fat_label">Fats</string>
    <string name="add_food_ingredients_create_protein_label">Proteins</string>
    <string name="add_food_ingredients_btn_label">ADD INGREDIENT</string>
    <string name="add_food_btn_label">SUBMIT</string>
    <string name="test_number">28</string>
    <string name="about_title">FAAP - Fit As A Plant</string>
    <string name="about_description">FAAP is an app which acts as a \"personal accountant\" when it comes to your health.</string>
    <string name="about_project_description">This app is made as a final project for the Android Development Class at the Faculty of Cybernetics, Statistics and Informatic Economics, Bucharest.</string>
    <string name="about_features_label">Features:</string>
    <string name="about_student_name">Student: Puscaru Vlad-Cristian</string>
    <string name="about_teachers_names">Teachers: Pocatiliu Paul, Dita Alexandru</string>
    <string name="home_btn_edit_user">Edit</string>
    <string name="register_btn_cancel">Cancel</string>
    <string name="add_food_btn_cancel_label">CANCEL</string>
    <string name="food_list_title">Elevated recipes</string>
    <string name="add_food_input_picture_label">Picture</string>
    <string name="add_food_input_picture_btn_label">+</string>



    <string name="error_date_format">Date format should be dd-MM-yyyy</string>
    <string name="dialog_positive_button_label">Ok</string>
    <string name="dialog_negative_button_label">Cancel</string>

    <string-array name="weights_array">
        <item>kg</item>
        <item>lbs</item>
    </string-array>

    <string-array name="heights_array">
        <item>cm</item>
        <item>inches</item>
        <item>feet</item>
    </string-array>

    <string-array name="features_array">
        <item>Track daily food consumption</item>
        <item>Create personalized meals</item>
        <item>Search for recipes</item>
        <item>Many more to follow..</item>
    </string-array>

    <string name="food_list_btn_search_label">Search</string>
    <string name="food_list_et_search_hint">eg: chicken, egg, bread</string>
    <string name="adapter_recipe_ingredients_label">Ingredients</string>
    <string name="about_quote">\"It\'s not much..but it\'s honest work\"</string>
    <string name="add_food_add_ingredient_description">Fill the form below to add a new ingredient</string>
    <string name="journal_title">Personal journal</string>
    <string name="journal_description">Here you can generate reports about your food consumptions.</string>
    <string name="journal_input_food_regex_label">Food name:</string>
    <string name="journal_input_food_regex_hint">eg: chicken</string>
    <string name="journal_input_ingredients_regex_label">Ingredients:</string>
    <string name="journal_input_ingredients_regex_hint">eg: onion, bread</string>
    <string name="journal_input_date_regex_label">Registered:</string>
    <string name="journal_input_date_regex_hint">eg: 20-20-2019</string>
    <string name="journal_btn_submit_label">SEARCH</string>
    <string name="journal_btn_submit_label_no_fields">SHOW ALL</string>
    <string name="journal_instructions">Click on the field you want to base the query on, fill the input and press the search button. Altirnatively, you can leave all fields unchecked and retreive all the items</string>
    <string name="journal_tv_resultEmpty">There is no item that matches your query</string>
    <string name="journal_fab_content_description">Save report to file</string>
    <string name="journal_dialog_title">File Name</string>
    <string name="journal_default_file_name">food_report</string>
    <string name="home_subsection_food_delete_button">DELETE Selected Items</string>
    <string name="adapter_food_registered_label">Registered on:</string>
    <string name="adapter_food_served_label">Served at:</string>
    <string name="adapter_food_ingredients_label">Ingredients:</string>

    <string name="csv_column_1_label">Nr. crt.</string>
    <string name="csv_column_2_label">Registered On</string>
    <string name="csv_column_3_label">Name</string>
    <string name="csv_column_4_label">Total Calories</string>
    <string name="csv_column_5_label">Carbohydrates</string>
    <string name="csv_column_6_label">Fats</string>
    <string name="csv_column_7_label">Proteins</string>
    <string name="csv_column_8_label">Served At</string>
    <string name="csv_save_done">Report saved in</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_btn_maps_label">Check out the nearest FAAP center</string>

    <string name="maps_location_error">Location access was denied!</string>

    <string name="maps_my_home_title">Cave of Geeks</string>
    <string name="maps_my_home_lat">44.448038</string>
    <string name="maps_my_home_lng">26.123054</string>
    <string name="maps_my_home_snippet">Programmers birthplace</string>

    <string name="maps_faap_center_1_title">FAAP Stefan cel Mare</string>
    <string name="maps_faap_center_1_lat">44.450818</string>
    <string name="maps_faap_center_1_lng">26.122324</string>
    <string name="maps_faap_center_1_snippet">FAAP Center</string>

    <string name="maps_faap_center_2_title">FAAP ASE/CSIE</string>
    <string name="maps_faap_center_2_lat">44.448034</string>
    <string name="maps_faap_center_2_lng">26.099158</string>
    <string name="maps_faap_center_2_snippet">FAAP Center</string>

    <string name="maps_faap_center_3_title">FAAP Unirea - Main Center</string>
    <string name="maps_faap_center_3_lat">44.427710</string>
    <string name="maps_faap_center_3_lng">26.102531</string>
    <string name="maps_faap_center_3_snippet">FAAP Center</string>

    <string name="maps_faap_center_4_title">FAAP Politehnica</string>
    <string name="maps_faap_center_4_lat">44.435041</string>
    <string name="maps_faap_center_4_lng">26.054957</string>
    <string name="maps_faap_center_4_snippet">FAAP Center</string>
    <string name="maps_btn_label">Find the nearest FAAP center</string>

    <string name="add_food_input_ingredients_switch_on_label">Create ingredient</string>
    <string name="add_food_input_ingredients_switch_off_label">Choose ingredient</string>
    <string name="add_food_add_ingredient_description_choose">Choose ingredient from the realtime database</string>

    <string name="ingredient_manager_title">Ingredient Manager</string>
    <string name="ingredient_manager_info">Here you can manage the ingredients in the realtime database provided by Firebase</string>

    <string name="ingredient_manager_add_title">Add ingredient</string>
    <string name="ingredient_manager_et_name_hint">Ingredient Name</string>
    <string name="ingredient_manager_et_calories_hint">Calories</string>
    <string name="ingredient_manager_et_carbohydrates_hint">Carbohydrates</string>
    <string name="ingredient_manager_et_fats_hint">Fats</string>
    <string name="ingredient_manager_et_proteins_hint">Proteins</string>
    <string name="ingredient_manager_form_error">Form is not valid!</string>
    <string name="ingredient_manager_ingredient_added">Ingredient added: </string>
    <string name="ingredient_manager_ingredient_edited">Ingredient edited: </string>
    <string name="ingredient_manager_ingredient_deleted">Ingredient deleted: </string>
    <string name="home_btn_avatar_label">+</string>
    <string name="home_section_graph_title">Overall Statistics</string>
    <string name="home_overall_total_title">Total values</string>
    <string name="home_overall_today_title">Today values</string>

    <string name="home_chart_total_description">Overall consumption</string>
    <string name="home_chart_total_center_text">Macro</string>
    <string name="home_chart_today_description">Today consumption</string>
    <string name="home_chart_today_center_text">Macro</string>
    <string name="menu_item_ingredient">Ingredient Manager</string>
</resources>
