<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_item_home"
        />

    <item
        android:id="@+id/nav_foodList"
        android:icon="@drawable/ic_faap_add"
        android:title="@string/menu_item_food_list"
        />

    <item
        android:id="@+id/nav_journal"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_item_journal"
        />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_item_history"
        />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_black"
        android:title="@string/menu_item_settings"
        />

</menu>