<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faap_login_background"
    android:paddingLeft="@dimen/login_horizontal_padding"
    android:paddingTop="@dimen/login_vertical_padding"
    android:paddingRight="@dimen/login_horizontal_padding"
    android:paddingBottom="@dimen/login_vertical_padding"
    tools:context=".LoginActivity"
    tools:ignore="Autofill">


    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="118dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/faap_logo" />


    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/login_et_username_hint"
        android:inputType="text"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_username"
        android:hint="@string/login_et_password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_btn_forgot_password"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_et_password"
        android:background="@null"
        android:text="@string/login_btn_forgot_password"
        android:textSize="@dimen/login_footer_text_size" />

    <Button
        android:id="@+id/login_btn_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_et_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/login_btn_register"
        android:textSize="@dimen/login_footer_text_size" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_register"
        android:layout_centerHorizontal="true"
        android:text="@string/login_btn_login" />


    <TextView
        android:id="@+id/login_tv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copy"
        android:textSize="@dimen/login_footer_text_size" />

    <ProgressBar
        android:id="@+id/login_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


</RelativeLayout>