<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faap_about_background"
    tools:context=".fragments.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/home_section_padding">

        <LinearLayout
            android:id="@+id/about_first_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/about_title"
                android:textColor="@color/colorFat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/about_description"

                android:textColor="@color/colorFat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:gravity="center_horizontal"
                android:text="@string/about_project_description"
                android:textColor="@color/colorFat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_second_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/about_first_section"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_features_label"

                android:textColor="@color/colorFat" />

            <ListView
                android:id="@+id/about_lv_features"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/about_list_max_height" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_third_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_second_section"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_student_name"

                android:textColor="@color/colorFat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/about_teachers_names"
                android:textColor="@color/colorFat" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/about_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_third_section"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:numStars="5" />

    </RelativeLayout>


</ScrollView>