<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".fragments.FoodListFragment">

    <TextView
        android:id="@+id/food_list_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_list_title"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/food_list_section_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_list_tv_title"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/food_list_et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:hint="@string/food_list_et_search_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/food_list_btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/food_list_btn_search_label"
            android:textSize="@dimen/login_footer_text_size" />


    </LinearLayout>

    <ListView
        android:id="@+id/food_list_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_list_section_search" />

    <ProgressBar
        android:id="@+id/food_list_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>